--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,31 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:weightSum="1"
+    android:background="@color/colorBackground">
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="fill_parent"
+
+    <FrameLayout
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:ems="10" >
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp">
 
-        <requestFocus />
-    </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView"
+            android:textColor="@color/bg_color"
+            android:textAlignment="center" />
+    </FrameLayout>
 
-
-    <Button
-        android:id="@+id/button1"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/bg_color"
-        android:text="Baixar Imagem"
-        android:onClick="baixarImagemClick"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="234dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@mipmap/logo" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="205dp"
+            android:layout_height="238dp"
+            android:layout_gravity="center" />
+    </FrameLayout>
 
 </LinearLayout>
