--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:textColor="@color/bg_color"
+        android:textColorHint="@color/bg_color"
         android:ems="10"
         android:id="@+id/emailLoginEditText"
         android:layout_marginTop="80dp"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:textColor="@color/bg_color"
+        android:textColorHint="@color/bg_color"
         android:ems="10"
         android:id="@+id/passwordLoginEditText"
         android:layout_marginTop="25dp"
