--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,8 @@
         android:ems="10"
         android:id="@+id/emailRegisterEditText"
         android:hint="@string/login_field_hint"
+        android:textColorHint="@color/bg_color"
+        android:textColor="@color/bg_color"
         android:layout_marginTop="80dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
@@ -26,6 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:textColorHint="@color/bg_color"
+        android:textColor="@color/bg_color"
         android:ems="10"
         android:id="@+id/passwordRegisterEditText"
         android:password="true"
@@ -37,6 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:textColorHint="@color/bg_color"
+        android:textColor="@color/bg_color"
         android:ems="10"
         android:id="@+id/confirmPasswordRegisterEditText"
         android:password="true"
