--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,11 +28,17 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp">
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="205dp"
-            android:layout_height="238dp"
-            android:layout_gravity="center" />
+
     </FrameLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Series"
+        android:textColor="@color/bg_color"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:onClick="openLista"/>
 
 </LinearLayout>
