--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,44 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:weightSum="1"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.bcc.unifal.emserie.HomeActivity"
     android:background="@color/colorBackground">
 
-
     <FrameLayout
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="#000000"
+        android:layout_alignBottom="@+id/MinhasSeries"
+        android:id="@+id/frameLayout"
+        android:layout_alignTop="@+id/MinhasSeries"></FrameLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView"
-            android:textColor="@color/bg_color"
-            android:textAlignment="center" />
-    </FrameLayout>
-
-    <FrameLayout
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="234dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp">
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Minhas Series"
+        android:textColor="@color/bg_color"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/MinhasSeries"
+        android:layout_marginTop="50dp" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listaMinhaSerie"
+        android:layout_below="@+id/frameLayout"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="250dp"
+        android:layout_marginTop="20dp"
+        android:background="#ffffff"
+        android:choiceMode="singleChoice" />
 
-    </FrameLayout>
+    <ImageView
+        android:id="@+id/imageMinhaSerie"
+        android:layout_width="205dp"
+        android:layout_height="238dp"
+        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Series"
+        android:text="Ver Series"
+        android:id="@+id/VerSerie"
         android:textColor="@color/bg_color"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:onClick="openLista"/>
+        android:layout_marginLeft="10dp"
+        android:onClick="listarSeriesClick"
+        android:layout_above="@+id/frameLayout"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/bg_color"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/SerieNome"
+        android:layout_alignTop="@+id/imageMinhaSerie"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/imageMinhaSerie" />
+
+</RelativeLayout>
