--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,10 +26,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Minhas Series"
         android:textColor="@color/bg_color"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/MinhasSeries"
-        android:layout_marginTop="50dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -38,7 +37,7 @@
         android:layout_below="@+id/frameLayout"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="250dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:background="#ffffff"
         android:choiceMode="singleChoice" />
 
@@ -53,13 +52,15 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ver Series"
-        android:id="@+id/VerSerie"
+        android:text="Usuário"
+        android:id="@+id/User"
         android:textColor="@color/bg_color"
-        android:layout_marginLeft="10dp"
-        android:onClick="listarSeriesClick"
-        android:layout_above="@+id/frameLayout"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginLeft="-5dp"
+        android:layout_below="@+id/frameLayout"
+        android:layout_alignParentStart="true"
+        android:nestedScrollingEnabled="false"
+        android:onClick="UserScreenClick"
+        android:layout_toStartOf="@+id/VerSerie" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,5 +72,71 @@
         android:layout_alignTop="@+id/imageMinhaSerie"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/imageMinhaSerie" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/bg_color"
+        android:text="Abrir serie"
+        android:id="@+id/AbrirSerie"
+        android:layout_alignBottom="@+id/User"
+        android:layout_alignEnd="@+id/frameLayout"
+        android:layout_toEndOf="@+id/VerSerie" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ver Series"
+        android:id="@+id/VerSerie"
+        android:textColor="@color/bg_color"
+        android:onClick="listarSeriesClick"
+        android:layout_alignBottom="@+id/AbrirSerie"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Ano de lançamento:"
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:layout_alignEnd="@+id/SerieNome"
+        android:layout_below="@+id/SerieNome"
+        android:layout_alignStart="@+id/SerieNome"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ano2"
+        android:textColor="@color/bg_color"
+        android:textAlignment="center"
+        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Canal:"
+        android:id="@+id/textView3"
+        android:textAlignment="center"
+        android:layout_alignEnd="@+id/ano2"
+        android:layout_toEndOf="@+id/imageMinhaSerie"
+        android:layout_below="@+id/ano2"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/canal2"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/bg_color"
+        android:layout_below="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center" />
 
 </RelativeLayout>
