--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,12 @@
     <color name="colorBackground">#303030</color>
     <color name="colorHint">#ffffff</color>
     <color name="buttonColor">#000000</color>
+
+
+    <color name="list_divider">#d9d9d9</color>
+    <color name="list_row_start_color">#ffffff</color>
+    <color name="list_row_end_color">#ffffff</color>
+    <color name="list_row_hover_start_color">#ebeef0</color>
+    <color name="list_row_hover_end_color">#ebeef0</color>
+    <color name="btn_logut_bg">#ff6861</color>
 </resources>
